--- a/resources/sass/pages/employer/_view.scss
+++ b/resources/sass/pages/employer/_view.scss
@@ -5,6 +5,7 @@
             margin-right: $space-4;
             border-radius: $border-radius-sm;
             background-color: $cloud-blue;
+            overflow: hidden;
             img {
                 width: 100%;
                 height: 100%;
